<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Homework</string>

    <string name="action_add_subject">Edit Subjects</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="author_info">Author info</string>
    <string name="github_info">view my Github projects</string>
    <string name="apps_info">view my other apps</string>
    <string name="feedback_info">send me feedback!</string>

    <string name="placeholder_text">place holder text</string>
    <string name="blank"> </string>

    <string name="no_assignments">no assignments! congratulations!</string>

    <string name="assignment_title">Assignment Title</string>
    <string name="due">Due</string>
    <string name="hyphen">-</string>
    <string name="todays_date">today\'s date: </string>
    <string name="submit">submit</string>
    <string name="swipe_to_remove_class">(swipe to remove class)</string>
    <string name="add_class">Add classes:</string>
    <string name="subject">Subject</string>
    <string name="date">date</string>

    <string name="title_activity_about">About</string>

</resources>
