<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageViewSubject"
        android:contentDescription="@string/blank"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@color/primary" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swipe_to_remove_class"
            android:textColor="#aaaaaa" />

        <ListView
            android:id="@+id/addSubjectListView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:listitem="@layout/add_subject_item_layout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_class" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <EditText
                android:id="@+id/subjectEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/subject" />

            <Space
                android:layout_width="16dp"
                android:layout_height="match_parent" />

            <ImageButton
                android:id="@+id/submitButtonSubject"
                android:contentDescription="@string/blank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/fab"
                android:src="@drawable/ic_action_accept"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>