<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:contentDescription="@string/blank"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@color/cyan" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:hint="@string/assignment_title" />

        <LinearLayout
            android:id="@+id/dueDateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/dueDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/due"
                android:textSize="@dimen/text_18" />

            <EditText
                android:id="@+id/dueDateEditTextMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:maxLength="2"
                android:inputType="date" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hyphen"/>
            <EditText
                android:id="@+id/dueDateEditTextDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:maxLength="2"
                android:inputType="date" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hyphen"/>
            <EditText
                android:id="@+id/dueDateEditTextYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:selectAllOnFocus="true"
                android:maxLength="4"
                android:inputType="date" />

            <TextView
                android:id="@+id/todaysDate"
                android:textColor="#aaaaaa"
                android:text="@string/todays_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>



        <Spinner
            android:id="@+id/subjectSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="#dedede"
            android:imeOptions="actionNext"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            />

        <Button
            android:id="@+id/submitButton"
            android:text="@string/submit"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="@color/cyan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        />

    </LinearLayout>

</LinearLayout>
