<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:scrollbars="vertical"
    tools:context="manuele.bryan.homework.activities.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--TODO: add app statistics for fun (maybe)-->
        <!--<android.support.v7.widget.CardView-->
        <!--xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
        <!--android:layout_gravity="center"-->
        <!--android:layout_margin="10dp"-->
        <!--android:layout_marginBottom="0dp"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:orientation="vertical"-->
        <!--android:gravity="center_horizontal"-->
        <!--android:background="#ffffff">-->

        <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="App info"-->
        <!--android:padding="@dimen/activity_horizontal_margin"-->
        <!--android:typeface="sans"-->
        <!--android:textSize="24sp"/>-->

        <!--</LinearLayout>-->

        <!--</android.support.v7.widget.CardView>-->

        <LinearLayout
            android:id="@+id/googlePlayButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="#455a64"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:background="@drawable/droid_symbol"
                android:contentDescription="@string/apps_info"
                android:cropToPadding="true"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:padding="6dp"
                android:text="@string/apps_info"
                android:textColor="#ffffff"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/githubButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@color/primary"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:background="@drawable/github_symbol"
                android:contentDescription="@string/github_info"
                android:cropToPadding="true"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:padding="6dp"
                android:text="@string/github_info"
                android:textColor="#ffffff"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/feedBackButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@color/accent"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:background="@drawable/feedback_icon"
                android:contentDescription="@string/feedback_info"
                android:cropToPadding="true"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:padding="6dp"
                android:text="@string/feedback_info"
                android:textColor="#ffffff"
                android:textSize="24sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
